# llm-scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: celery_backend.py  chat_bot.py  simple.py
src/llm_scheduler/: __init__.py  executor_factory.py
src/llm_scheduler/backends/: base.py  celery.py  in_memory.py  playground.py
src/llm_scheduler/backends/celery/: backend.py
src/llm_scheduler/domain/: __init__.py  job.py  task.py
src/llm_scheduler/executors/: http.py  protocol.py
src/llm_scheduler/extractors/: base.py  oai.py
src/llm_scheduler/storages/: protocol.py  sqlalchemy.py
tests/backends/: test_in_memory_backend.py  test_playground_backend.py
tests/executors/: test_executor_factory.py  test_http_executor.py
tests/extractors/: test_oai_extractor.py
tests/storages/: test_sqlalchemy_storage.py
